[gd_scene load_steps=9 format=3 uid="uid://b0jlk4extd4v"]

[ext_resource type="Script" path="res://game/save_menu.gd" id="1_byn2h"]
[ext_resource type="FontFile" uid="uid://dcygvh0q3vd35" path="res://assets/fonts/pixel-font-virtue-assets/ttf/virtue_extra_large_bold.ttf" id="1_f8ijd"]
[ext_resource type="Theme" uid="uid://bipr4bw2pcbw6" path="res://themes/retro.tres" id="1_rms7w"]
[ext_resource type="StyleBox" uid="uid://dmyco2rlh7ok1" path="res://game/box_dark.tres" id="2_v6d3c"]
[ext_resource type="PackedScene" uid="uid://uo48yikfpeo8" path="res://game/save_slots.tscn" id="3_r7u4x"]
[ext_resource type="FontFile" uid="uid://bcpnex2rvsreh" path="res://assets/fonts/pixel-font-virtue-assets/ttf/virtue_large_black.ttf" id="6_57jm2"]
[ext_resource type="FontFile" uid="uid://br802x22psogy" path="res://assets/fonts/pixel-font-virtue-assets/ttf/virtue_large_bold.ttf" id="6_iuj6h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yteaq"]
bg_color = Color(0.0754, 0.09087, 0.13, 1)

[node name="SaveSlotWrapper" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rms7w")
theme_override_styles/panel = SubResource("StyleBoxFlat_yteaq")
script = ExtResource("1_byn2h")

[node name="SaveSlotsLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 10.0
offset_right = 632.0
offset_bottom = 36.0
theme_override_fonts/font = ExtResource("1_f8ijd")
text = "Save Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 36
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/panel = ExtResource("2_v6d3c")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="SaveSlots" parent="MarginContainer/HBoxContainer/Panel/MarginContainer" instance=ExtResource("3_r7u4x")]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Panel2" type="Panel" parent="MarginContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_v6d3c")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel2"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel2/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="SaveName" type="Label" parent="MarginContainer/HBoxContainer/Panel2/VBoxContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("6_57jm2")
text = "Test"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer/HBoxContainer/Panel2/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
stretch_mode = 3

[node name="ThumbnailPreview" type="TextureRect" parent="MarginContainer/HBoxContainer/Panel2/VBoxContainer/AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 2
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel2/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="SaveDescription" type="Label" parent="MarginContainer/HBoxContainer/Panel2/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("6_iuj6h")
text = "Test"

[node name="SaveDate" type="Label" parent="MarginContainer/HBoxContainer/Panel2/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Test"
